--- a/manifest.json
+++ b/manifest.json
@@ -31,7 +31,10 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "unhook-reddit@example.com",
-      "strict_min_version": "109.0"
+      "strict_min_version": "126.0"
+    },
+    "gecko_android": {
+      "strict_min_version": "126.0"
     }
   },
   "icons": {
