--- a/manifest.json
+++ b/manifest.json
@@ -31,15 +31,16 @@
   "browser_specific_settings": {
     "gecko": {
       "id": "unhook-reddit@example.com",
-      "strict_min_version": "126.0"
+      "strict_min_version": "126.0",
+      "data_collection_permissions": {
+        "required": [
+          "none"
+        ]
+      }
     },
     "gecko_android": {
       "strict_min_version": "126.0"
     }
-  },
-  "data_collection_permissions": {
-    "data_types": [],
-    "description": "This extension does not collect any user data. All settings are stored locally on your device."
   },
   "icons": {
     "16": "assets/unhook-reddit-16.png",
